--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "framer-motion": "^12.23.12",
     "motion": "^12.17.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
