--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "motion": "^12.17.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
